# cpp_sandbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example
src/: main.cpp  state.h
